Fixes flex ordering of containers on homepage so that images and text alternate on small screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -117,4 +117,7 @@ section {
     .container {
       flex-direction: column;
     }
+    .container-rev {
+      flex-direction: column-reverse;
+    }
   }
